api pembukuan keuangan

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/mandiri_pembukuan
+spring.datasource.url=jdbc:postgresql://localhost:5432/pembukuan_keuangan
 spring.datasource.username=postgres
 spring.datasource.password=sql1234
 
