--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.domain</groupId>
-	<artifactId>api-mandiri</artifactId>
+	<artifactId>api-pembukuan-keuangan</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>api-mandiri</name>
+	<name>api-pembukuan-keuangan</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
